# ubuntu-lint

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ubuntu-lint
.github/workflows/: qa.yaml
debian/: changelog  control  copyright  gbp.conf  rules  ubuntu-lint.install  ubuntu-lint.manpages
debian/tests/: control  pytest
doc/: Makefile  ubuntu-lint.1  ubuntu-lint.md
dput.d/hooks/: extraneous-bad-files.json  merge-missing-new-debian-changelog.json  missing-git-ubuntu-references.json  missing-launchpad-bugs-fixed.json  missing-pending-changelog-entry.json  missing-ubuntu-maintainer.json  missing-version-suffix.json  ppa-version-string.json  sru-bug-missing-release-tasks.json  sru-bug-missing-template.json  sru-version-string-breaks-upgrades.json  sru-version-string-convention.json
dput.d/profiles/: ppa.json  ubuntu.json
tests/: test_exec.py  test_linters.py
tests/testdata/baseline/: changelog  changes
tests/testdata/cli/baseline/: merge-missing-new-debian-changelog.changelog  merge-missing-new-debian-changelog.changes
tests/testdata/cli/distribution-invalid/: changelog
tests/testdata/cli/merge-missing-new-debian-changelog/: changes
tests/testdata/cli/missing-launchpad-bugs-fixed/: changes
tests/testdata/dput/baseline/: hello_2.12.3-1ubuntu1.debian.tar.xz  hello_2.12.3-1ubuntu1.dsc  hello_2.12.3-1ubuntu1_source.changes
tests/testdata/dput/merge-missing-new-debian-changelog/: hello_2.12.3-1ubuntu1.debian.tar.xz  hello_2.12.3-1ubuntu1.dsc  hello_2.12.3-1ubuntu1_source.changes
tests/testdata/missing-bug-references/: changelog
tests/testdata/missing-git-ubuntu-references/: changes
tests/testdata/missing-ubuntu-maintainer/: changes
tests/testdata/missing-version-suffix/: changelog  changes
ubuntu_lint/: __init__.py  cli.py  context.py  dput.py  linters.py
(+13 files in other folders)
