[tool.poetry]
name = "ubuntu-lint"
version = "0.1.0"
description = ""
authors = ["Nick Rosbrook <enr0n@ubuntu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-debian = "^1.0.1"
requests = "^2.32.5"
distro-info = "^1.0"
launchpadlib = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
