[tool.poetry]
name = "ubuntu-lint"
version = "0.1.0"
description = ""
authors = ["Nick Rosbrook <enr0n@ubuntu.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-debian = "^1.0.1"
requests = "^2.32.5"
distro-info = "^1.0"
launchpadlib = "^2.1.0"


[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"
types-requests = "^2.32.4.20260107"

[tool.poetry.group.test.dependencies]
requests-mock = "^1.12.1"
pytest = "^9.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disable_error_code = ["import-untyped"]
